--- a/src/views/includes/head.jade
+++ b/src/views/includes/head.jade
@@ -4,5 +4,4 @@ head
 	link(href='http://fonts.googleapis.com/css?family=Fira+Sans:300,500,700', rel='stylesheet', type='text/css')
 	link(href='http://fonts.googleapis.com/css?family=Oswald:400,700,300', rel='stylesheet', type='text/css')
 	link(rel='icon', type='image/ico', href='favicon.ico')
-	// Calendario Theme CSS
-	link(rel='stylesheet', href='css/styles.css', type='text/css')
+	link(rel='stylesheet', href='css/app.css', type='text/css')
