--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -73,238 +73,5 @@ html
 				p Atualmente, 21% da extensão da Amazônia é ocupada e reconhecida como de usufruto exclusivo dos povos indígenas. Na Amazônia brasileira essa proporção é de 22%, enquanto na Colômbia supera os 50% (link com RAISG). Pesquisas etnológicas e arqueológicas têm demonstrando como os conhecimentos e práticas indígenas são responsáveis, em grande medida, na produção e reprodução da grande diversidade ambiental da Amazônia. Extensas paisagens são resultado de práticas de manejo específicas, assim como espécies importantes na economia regional, como a castanha-do-pará, foram distribuídas em larga escala por populações indígenas. Também estão avançadas as pesquisas que mostram a importância das florestas tropicais úmidas, com destaque para a Floresta Amazônica, no equilíbrio ecossistêmico em escala regional e global. É clara a importância da floresta amazônica no ciclo hidrológico que influencia as precipitações no centro e sul do Brasil. Igualmente evidente é relevância de se evitar o desmatamento nessa região como estratégia de mitigação das emissões de gases de efeito estufa, sendo que de 15 a 20% das emissões totais provêm da eliminação de florestas tropicais.
 				p No entanto, ameaças sobre esse bioma e suas populações tradicionais são crescentes, sendo que a conjuntura política e econômica nacional vem favorecendo, crescentemente, pressões predatórias associadas ao agronegócio, aos grandes projetos de infraestrutura para produção de energia e mineração. As políticas desenvolvimentistas ganham espaço em detrimento dos direitos e territórios indígenas e da legislação e governança ambiental. O cenário atual é de tensões e conflitos em torno da governança ambiental de extensos territórios da Amazônia (link Amazônia sob Pressão).
 				p A pesquisa sobre os ciclos anuais, em conjunto com estudos sobre clima, ecologia, agronomia etc., está gerando informações detalhadas referentes às mudanças climáticas nessa região, bem como recomendações para futuras medidas de adaptação. Outro resultado é o desenvolvimento e aplicação prática de metodologias de monitoramento e análise ambiental que poderão ser estendidas para outras regiões do rio Negro e da Amazônia. Essa pesquisa permitirá aos pesquisadores e lideranças indígenas discutir simetricamente a questão das mudanças climáticas e os impactos em seus territórios e formas de manejo, bem como as políticas de governança ambiental para a Amazônia.
-//
-		#content
-		  h1 Ciclos anuais no rio Tiquié
-		  h2 2006, 2007, 2008
-		  h3.lead Movimento das estações no calendário Tukano, Desana, Tuyuka
-		  #text
-			p
-			  | Os conhecedores indígenas narram o ciclo anual, que foi constituído na origem do mundo e da humanidade. Esse encadeamento de fenômenos e atividades vem sendo pesquisado por uma equipe de pesquisadores indígenas do rio Tiquié em conjunto com pesquisadores/assessores do 
-			  a(href='http://www.socioambiental.org', target='_blank', name='Instituto Socioambiental') Instituto Socioambiental
-			  | . Além de considerar a narrativa e suas referências cosmológicas, são realizadas observações e registros diários sobre o tempo e os ciclos de vida que, periodicamente, são resumidos, sistematizados e analisados. Essas representações circulares dos três anos é um dos resultados dessa investigação.
-			p
-			  | O objetivo dessa pesquisa é entender e mostrar como opera ciclicamente o sistema sociocultural integrado ao econômico-ecológico no rio Tiquié, quais são suas referências conceituais, os conhecimentos e as práticas envolvidos. A comparação dos ciclos busca evidenciar os padrões e repetições nas estações, bem como as variações encontradas e seus possíveis significados em termos do manejo. Futuramente, quiçá relações com os câmbios climáticos globais.
-			p
-			  | Nesses infográficos, foram incluídos, de fora para dentro, os nomes das estações como identificadas pelos pesquisadores indígenas, dados sobre as precipitações (chuvas) e o nível do rio no médio Tiquié, referência aos meses do calendário gregoriano, e um círculo interno ilustrando a posição das constelações astronômicas citadas na identificação das estações.
-			p.small
-			  | É importante ressaltar que essa pesquisa colaborativa e intercultural está na fase de elaborar uma descrição do ciclo anual no rio Tiquié e, mais extensamente, no noroeste amazônico. Os textos do livro permitem entender as práticas de manejo e suas variações ao longo do ciclo anual, a sazonalidade na disponibilidade dos recursos naturais, a interdependência entre organização socioeconômica, ciclos de vida e clima. Nesses infográficos não foi possível incluir todas essas variantes.
-		  #sidebar
-			h2
-			  b Pesquisa
-			h4
-			  b
-				| Agentes Indígenas de Manejo 
-				br
-				| Ambiental do rio Tiquié
-			  |  (AIMAs)
-			h4
-			  | Alberto Alves Marques*
-			  i , tukano, Santa Luzia
-			h4
-			  | Aldo Marques Sampaio*
-			  i , tukano, Santa Luzia
-			h4
-			  | Cornélio Lobo Gonçalves*
-			  i , desana, São Luis
-			h4
-			  | Damião Amaro Barbosa
-			  i , makuna, Buraco de Cobra
-			h4
-			  | Dario Azevedo Resende
-			  i , tuyuka, Igarapé Onça
-			h4
-			  | Dionísio Mesquita
-			  i , bará, Bela Vista
-			h4
-			  | Estevão Monteiro Pedrosa
-			  i , tukano, Cunuri
-			h4
-			  | Evaristo Caldas Azevedo
-			  i , tukano, Pirarara
-			h4
-			  | Gabriel Prado Barbosa*
-			  i , makuna, São Pedro
-			h4
-			  | Genesio Fernandes Araújo*
-			  i , yuhup, Igarapé Cunuri
-			h4
-			  | Germano José Borges Campos
-			  i , desana, São Sebastião
-			h4
-			  | Gilson Pimentel Aguiar
-			  i , desana, Floresta
-			h4
-			  | Ismael Pimentel dos Santos
-			  i , desana, Santo Antônio
-			h4
-			  | Jarbas Goes Pires
-			  i , hup, Barreira
-			h4
-			  | João Batista Marques Meira*
-			  i , tuyuka, Cachoeira Comprida
-			h4
-			  | João Bosco Marques Resende*
-			  i , tuyuka, São Pedro
-			h4
-			  | João Paulo Lemos Marinho*
-			  i , tukano, Rio Castanha
-			h4
-			  | João Pedro Lima Azevedo*
-			  i , tukano, Pirarara
-			h4
-			  | João Teles Meira
-			  i , tuyuka, Cachoeira Comprida
-			h4
-			  | Jodair Resende Marques*
-			  i , tukano, Caruru
-			h4
-			  | Joel Pedrosa Paz*
-			  i , desana, Cunuri
-			h4
-			  | Jonas Prado Barbosa*
-			  i , makuna, São Pedro
-			h4
-			  | José Maria Alcântara
-			  i , tukano, Matapi
-			h4
-			  | José Maria Barbosa Ramos
-			  i , tuyuka, São Pedro
-			h4
-			  | José Caldas Pedrosa
-			  i , tukano, Cunuri
-			h4
-			  | José Pimentel
-			  i , tukano, Bela Vista
-			h4
-			  | Lenildo Aguiar Azevedo*
-			  i , tukano, Pirarara
-			h4
-			  | Lucas Alves Bastos
-			  i , tukano, São Paulo
-			h4
-			  | Mateus Gomes Macedo
-			  i , desana, Duhtura
-			h4
-			  | Marcos Monteiro Pedrosa*
-			  i , tukano, Cunuri
-			h4
-			  | Marcos Resende Barbosa*
-			  i , tuyuka, São Pedro
-			h4
-			  | Mauro Monteiro Pedrosa*
-			  i , tukano, Cunuri
-			h4
-			  | Orlando Massa Moura
-			  i , tukano, Maracajá
-			h4
-			  | Oswaldo Barbosa Alves
-			  i , tukano, São Paulo
-			h4
-			  | Paulo de Abreu Lobo*
-			  i , miriti-tapuya, Iraity
-			h4
-			  | Paulo Goes Pires*
-			  i , hup, Igarapé Taracuá
-			h4
-			  | Rafael Azevedo
-			  i , tukano, Acará-Poço
-			h4
-			  | Roberval Sobrano Araújo Pedrosa
-			  i , tukano, Serra de Mucura
-			h4
-			  | Rogelino da Cruz Alves Azevedo
-			  i , tukano, São José
-			h4
-			  | Valerio Azevedo Pereira*
-			  i , desana, Acará-Poço
-			h5(style='margin:5px 0')
-			  | (40 pesquisadores indígenas, 8 povos indígenas, 26 comunidades do rio Tiquié e afluentes)
-			h5(style='margin:5px 0')
-			  | * Não está mais na equipe atual de AIMAs, mas contribuiu no decorrer da pesquisa.
-			h2 Instituto Socioambiental
-			h4
-			  | Aloisio Cabalzar 
-			  i (coordenação)
-			h4 Pieter van der Veld
-			h4 Melissa Oliveira
-			h2 Pesquisadores Associados
-			h4
-			  | Walmir Thomazi Cardoso 
-			  i (astrônomo, PUC/SP)
-			h4
-			  | Tony Gross 
-			  i (UN University)
-			h4
-			  | Ferdouz Vuilliomenet Cochran 
-			  i (geógrafa, University of Kansas)
-			h2 Design
-			h4 Hebert Valois
-			h2 Equipe InfoAmazonia
-			h4
-			  b Base de dados:
-			  |  Vitor George
-			h4
-			  b Coordenação:
-			  |  Gustavo Faleiros
-			h2 Vídeo
-			h4 Grão Filmes
-			h4
-			  b Filmagem e edição:
-			  |  Thiago Carvalhaes
-			.clear
-			h3 Realização
-			a(href='http://www.socioambiental.org', target='_blank', name='Instituto Socioambiental', style='margin:10px 65px 30px;width:120px;')
-			  img(src='img/partners/isa20.jpg', alt='Instituto Socioambiental')
-			.realiz
-			  a(href='http://rederionegro.socioambiental.org/', target='_blank', name='Rede Rio Negro')
-				img(src='img/partners/rn.png', alt='Rede Rio Negro')
-			.realiz
-			  // <a href="" target="_blank" name="Associação das Comunidades Indígenas do Médio Tiquié">
-			  img(src='img/partners/acimet.png', alt='Associação das Comunidades Indígenas do Médio Tiquié')
-			  // </a>
-			.realiz
-			  a(href='http://www.foirn.org.br/', target='_blank', name='Federação das Organizações Indígenas do Rio Negro')
-				img(src='img/partners/foirn.png', alt='Federação das Organizações Indígenas do Rio Negro')
-			.realiz
-			  a(href='http://culturaviva.org.br/mapa/associacao-escola-indigena-tukano-yupuri/', target='_blank', name='Associação Escola Indígena Tukano Yupuri')
-				img(src='img/partners/aeity.png', alt='Associação Escola Indígena Tukano Yupuri')
-			.realiz.menor
-			  // <a href="" target="_blank" name="Associação das Tribos indígenas do Alto Rio Tiqué"><img src="img/partners/atriart.png" /></a>
-			  h1
-				| ATRIART
-				h4 Associação das Tribos indígenas do Alto Rio Tiqué
-			.realiz.menor
-			  // <a href="http://infoamazonia.org" target="_blank" name="Associação das Comunidades Indígenas do Rio Castanha"><img src="img/partners/acirc.png" /></a>
-			  h1
-				| ACIRC
-				h4 Associação das Comunidades Indígenas do Rio Castanha
-			.realiz.menor
-			  // <a href="" target="_blank" name=""><img src="img/partners/aeitu.png" /></a>
-			  h1 AEITU
-			.realiz.menor
-			  // <a href="" target="_blank" name=""><img src="img/partners/oids.png" /></a>
-			  h1 OIDS
-			.realiz.menor
-			  // <a href="" target="_blank" name=""><img src="img/partners/oibv.png" /></a>
-			  h1 OIBV
-			.clear
-			h3(style='margin-top:50px;') Apoio
-			.apoio
-			  a(href='http://moore.org', target='_blank', name='Gordon and Betty Moore Foundation')
-				img(src='img/partners/moore.png', alt='Gordon and Betty Moore Foundation')
-			.apoio
-			  a(href='http://www.arapyau.org.br/', target='_blank', name='Instituto Arapyaú')
-				img(src='img/partners/arapyau.png', alt='Instituto Arapyaú')
-			.apoio
-			  a(href='http://www.regnskog.no/en/home', target='_blank', name='Rainforest Foundation Norway')
-				img(src='img/partners/rfn.png', alt='Rainforest Foundation Norway')
-			.apoio
-			  a(href='http://www.fapeam.am.gov.br/', target='_blank', name='Fundação de Amparo à Pesquisa do Estado do Amazonas')
-				img(src='img/partners/fapeam.png', alt='Fundação de Amparo à Pesquisa do Estado do Amazonas')
-			.clear
-			h3(style='margin-top:50px;') Desenvolvimento
-			a(href='http://infoamazonia.org', target='_blank', name='Infoamazônia')
-			  img(src='img/partners/infoamazonia.png', alt='Infoamazonia', style='margin:0 20px;')
-		// end #corpo
-		// <iframe src="isa-header/index.php?estilo=verde" style="border:none;width:100%;height:30px;position:absolute;top:0;right:0;left:0;"></iframe>
+
+				include bottom
