--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -3,10 +3,25 @@ html
 	head
 		include includes/head
 	body
+		#masthead.row
+			.container.row
+				.twelve.columns
+					.head-title
+						h1 Ciclos anuais
+						h2 dos povos indígenas no Rio Tiquié
+			.container
+				.eight.columns
+					#site-desc
+						p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend augue velit, vitae interdum nibh feugiat non. Praesent viverra mattis augue, eu placerat sapien porttitor at. Nulla eros erat, feugiat quis sagittis vitae, pretium vel tortor. Etiam sit amet accumsan lectus. Vestibulum ligula metus, consequat non massa sed, hendrerit vulputate sapien. In ac faucibus odio. Curabitur placerat mauris quis dolor porta, quis tempus erat bibendum. Aenean vestibulum mauris id malesuada ultricies.
+				.four.columns
+					#calendar-legend
+						p Entenda o funcionamento
+							br
+							| do calendário:
 		include viz
 		.container
 			.twelve.columns
-				h1 Alto rio Negro – noroeste amazônico
+				h2 Alto rio Negro – noroeste amazônico
 				p O noroeste amazônico compreende o Alto Rio Negro, região de fronteira entre Brasil, Colômbia e Venezuela, onde habitam 31 povos de quatro famílias linguísticas que constituem um sistema multi-étnico que perdura desde tempos pré-coloniais. Apenas na parte brasileira estão localizadas nove terras indígenas homologadas a partir de 1997, totalizando mais de 200 mil km² em extensão contínua. Com uma população total de 64 mil (estimativa IBGE, 2014), distribuída em cerca de 700 comunidades e pequenas cidades ribeirinhas, é a região com a maior proporção de população indígena no Brasil, superando 80%.
 				p Antes da colonização portuguesa, toda a bacia do rio Negro era mais povoada. A partir do século XVIII, sua população foi sendo concentrada em aldeamentos, transferida compulsoriamente para trabalhos forçados no baixo Amazonas e dizimada em guerras e invasões. Todo o curso baixo e médio do Negro, bem como seus afluentes, viram-se esvaziados de sua população original. O alto rio Negro tornou-se uma área de refúgio que, embora também fosse alvo de violências na busca por produtos e mão-de-obra, foi relativamente menos assolada pelas invasões. A divisão geopolítica pós-colonial, com a demarcação das fronteiras nacionais, significou novas formas de interferência no sistema social tradicional, com seus desdobramentos atuais, como militarização, escolarização visando a integração dos povos indígenas às respectivas sociedades nacionais, difusão das línguas nacionais (português e espanhol), dependência de bens industrializados etc.
 				p A cidade de São Gabriel da Cachoeira destaca-se hoje como o principal centro urbano regional, com população de cerca de 20 mil habitantes. Atualmente, cerca da metade da população desse município encontra-se urbanizada. Esse nível de concentração urbana, crescente, é problemático, na medida em que mais de 90% de sua superfície é constituído por terras indígenas. A cidade observou um aumento populacional significativo nos últimos trinta anos, devido ao fluxo migratório das comunidades indígenas do interior e, em menor escala, à entrada de pessoas de fora da região. O principal incentivo foi o início das obras de abertura de duas estradas, um trecho da Perimetral Norte e a BR307, empreendimentos que fizeram parte do Plano de Integração Nacional levado a efeito pelos governos militares na década de 70; secundado pelo estabelecimento de contingentes militares no mesmo período e o consequente incremento do comércio e outros serviços. Atualmente, o principal fator de migração são os programas de transferência de renda para as famílias indígenas, política que não foi ajustada às grandes distâncias e à falta de acesso à rede bancária, comércio e outros serviços no interior do município e das terras indígenas.
