start content nav

--- a/src/css/app.less
+++ b/src/css/app.less
@@ -71,3 +71,35 @@
 		}
 	}
 }
+
+#content-nav {
+	background: #f0f0f0;
+	border-bottom: 1px solid #999;
+	nav {
+		width: 100%;
+		display: table;
+		a {
+			width: 1%;
+			display: table-cell;
+			vertical-align: middle;
+			padding: 20px 10px;
+			text-align: center;
+			line-height: 120%;
+			text-shadow: 0 0 0;
+			color: #444;
+			&:hover {
+				text-shadow: 0 0 0;
+				background: #ccc;
+				color: #333;
+			}
+		}
+	}
+}
+
+h1,
+h2,
+h3,
+h4 {
+	font-family: "Oswald";
+	font-weight: 200;
+}
