--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -19,8 +19,11 @@ html
 							br
 							| do calendário:
 		include viz
+
+		include includes/content-nav
+
 		.container
-			.twelve.columns
+			.eight.columns.offset-by-two
 				h2 Alto rio Negro – noroeste amazônico
 				p O noroeste amazônico compreende o Alto Rio Negro, região de fronteira entre Brasil, Colômbia e Venezuela, onde habitam 31 povos de quatro famílias linguísticas que constituem um sistema multi-étnico que perdura desde tempos pré-coloniais. Apenas na parte brasileira estão localizadas nove terras indígenas homologadas a partir de 1997, totalizando mais de 200 mil km² em extensão contínua. Com uma população total de 64 mil (estimativa IBGE, 2014), distribuída em cerca de 700 comunidades e pequenas cidades ribeirinhas, é a região com a maior proporção de população indígena no Brasil, superando 80%.
 				p Antes da colonização portuguesa, toda a bacia do rio Negro era mais povoada. A partir do século XVIII, sua população foi sendo concentrada em aldeamentos, transferida compulsoriamente para trabalhos forçados no baixo Amazonas e dizimada em guerras e invasões. Todo o curso baixo e médio do Negro, bem como seus afluentes, viram-se esvaziados de sua população original. O alto rio Negro tornou-se uma área de refúgio que, embora também fosse alvo de violências na busca por produtos e mão-de-obra, foi relativamente menos assolada pelas invasões. A divisão geopolítica pós-colonial, com a demarcação das fronteiras nacionais, significou novas formas de interferência no sistema social tradicional, com seus desdobramentos atuais, como militarização, escolarização visando a integração dos povos indígenas às respectivas sociedades nacionais, difusão das línguas nacionais (português e espanhol), dependência de bens industrializados etc.
@@ -55,7 +58,7 @@ html
 						td pouco produtiva
 						td desenvolvida
 						td desenvolvida
-				h1 Os ciclos anuais
+				h2 Os ciclos anuais
 				h3 Calendário dos povos indígenas do rio Tiquié
 				p Para os povos indígenas do noroeste amazônico, os conhecimentos e práticas de manejo estão encadeados ao longo de ciclos anuais. Ao narrarem o ciclo anual, os conhecedores indígenas do rio Tiquié tem como principal referência as constelações astronômicas (ñokoa wametise, em tukano), a maior parte delas situada no equador celeste. Cada constelação tem uma narrativa de origem, associada a algum episódio da criação do mundo. A constelação considerada em cada período é aquela que está se pondo naqueles dias no começo da noite, quando já estão visíveis ao escurecer. Essas constelações nomeiam um conjunto de dez a doze estações chuvosas que se sucedem no ano. Em tukano essas enchentes são chamadas poero; são os dias de inverno e repiquete do rio. Estão entremeadas por estações caracterizadas por dias de sol e vazante do rio, chamados em tukano de k¡ma (são os verões).
 				p O calendário anual indígena enfatiza certos fenômenos e ciclos biológicos particulares como referência. Nomeadamente, o ciclo hidrológico (precipitações e, sobretudo, as flutuações no nível do rio e seus afluentes); o ciclo de vida dos peixes, especialmente de algumas espécies de aracus (gênero Leporinus); e o calendário agrícola.
