--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -12,7 +12,9 @@ html
 			.container
 				.eight.columns
 					#site-desc
-						p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend augue velit, vitae interdum nibh feugiat non. Praesent viverra mattis augue, eu placerat sapien porttitor at. Nulla eros erat, feugiat quis sagittis vitae, pretium vel tortor. Etiam sit amet accumsan lectus. Vestibulum ligula metus, consequat non massa sed, hendrerit vulputate sapien. In ac faucibus odio. Curabitur placerat mauris quis dolor porta, quis tempus erat bibendum. Aenean vestibulum mauris id malesuada ultricies.
+						p O ano das populações indígenas do rio Tiquié, no extremo Noroeste Amazônico, divide-se em várias estações, ora relacionadas com fenômenos astrológicos, ora com aspectos ambientais. Embora similar ao calendário gregoriano de 365 dias, um ciclo anual completo tem duração ligeiramente flutuante.
+
+						p Acompanhe as relações entre fenômenos cientificamente medidos, como a pluviometria e o nível do rio, e as estações do ano informadas por pesquisadores indígenas desta região.
 				.four.columns
 					#calendar-legend
 						p Entenda o funcionamento
