--- a/src/views/includes/content-nav.jade
+++ b/src/views/includes/content-nav.jade
@@ -2,8 +2,8 @@
 	.container
 		.twelve.columns
 			nav
-				a(href="#") Alto rio Negro – noroeste amazônico
-				a(href="#") Os ciclos anuais
-				a(href="#") A pesquisa colaborativa
-				a(href="#") Manejo do mundo
-				a(href="#") Povos indígenas da Amazônia e mudanças climáticas
+				a(href="#alto-rio-negro") Alto rio Negro – noroeste amazônico
+				a(href="#clicos-anuais") Os ciclos anuais
+				a(href="#pesquisa-colaborativa") A pesquisa colaborativa
+				a(href="#manejo-do-mundo") Manejo do mundo
+				a(href="#povos-indigenas") Povos indígenas da Amazônia e mudanças climáticas
