better nav, add icons and map

--- a/src/views/includes/content-nav.jade
+++ b/src/views/includes/content-nav.jade
@@ -1,9 +1,15 @@
-#content-nav.row
-	.container
-		.twelve.columns
-			nav
-				a(href="#alto-rio-negro") Alto rio Negro – noroeste amazônico
-				a(href="#clicos-anuais") Os ciclos anuais
-				a(href="#pesquisa-colaborativa") A pesquisa colaborativa
-				a(href="#manejo-do-mundo") Manejo do mundo
-				a(href="#povos-indigenas") Povos indígenas da Amazônia e mudanças climáticas
+#content-nav
+	nav
+		p.grouped
+			span.icon-back
+			a(href="#viz" title="Calendário")
+				span.icon-circle
+			a(href="#map" title="Mapa")
+				span.icon-map
+			a(href="#video" title="Vídeo")
+				span.icon-video
+		a(href="#alto-rio-negro") Alto rio Negro – noroeste amazônico
+		a(href="#clicos-anuais") Os ciclos anuais
+		a(href="#pesquisa-colaborativa") A pesquisa colaborativa
+		a(href="#manejo-do-mundo") Manejo do mundo
+		a(href="#povos-indigenas") Povos indígenas da Amazônia e mudanças climáticas
