--- a/src/css/app.less
+++ b/src/css/app.less
@@ -1,5 +1,6 @@
 @import (inline) "normalize.css";
 @import (inline) "skeleton.css";
+@import (inline) "fonts.css";
 @import "calendario";
 
 .row {
@@ -73,34 +74,43 @@
 }
 
 #content-nav {
-	background: #f0f0f0;
-	border-bottom: 1px solid #999;
+	background: #fff;
 	&.fixed {
 		z-index: 99999;
 		position: fixed;
 		top: 0;
-		left: 0;
-		right: 0;
 	}
 	nav {
 		width: 100%;
-		display: table;
+		padding-top: 60px;
+		.grouped,
 		a {
-			width: 1%;
-			display: table-cell;
-			vertical-align: middle;
-			padding: 20px 10px;
-			text-align: center;
+			font-family: "Oswald";
+			font-weight: 200;
+			display: block;
+			padding: 20px 0;
 			line-height: 120%;
+			font-size: 20px;
 			text-shadow: 0 0 0;
+			margin: 0;
 			color: #444;
+			border-bottom: 1px solid #ddd;
 			&:hover {
 				text-shadow: 0 0 0;
-				background: #ddd;
-				color: #333;
+				color: #111;
 			}
 		}
+		.grouped a {
+			display: inline;
+			padding: 0;
+			margin-left: 10px;
+			border: 0;
+		}
 	}
+}
+
+.page-section {
+	padding-top: 60px;
 }
 
 h1,
