--- a/src/css/app.less
+++ b/src/css/app.less
@@ -100,11 +100,17 @@
 				color: #111;
 			}
 		}
-		.grouped a {
-			display: inline;
-			padding: 0;
-			margin-left: 10px;
-			border: 0;
+		.grouped {
+			display: table;
+			width: 100%;
+			a {
+				text-align: center;
+				width: 1%;
+				display: table-cell;
+				padding: 0;
+				margin-right: 10px;
+				border: 0;
+			}
 		}
 	}
 }
