--- a/src/views/includes/content-nav.jade
+++ b/src/views/includes/content-nav.jade
@@ -1,7 +1,8 @@
 #content-nav
 	nav
 		p.grouped
-			span.icon-back
+			a(href="#" title="Topo")
+				span.icon-back
 			a(href="#viz" title="Calendário")
 				span.icon-circle
 			a(href="#map" title="Mapa")
