--- a/src/css/app.less
+++ b/src/css/app.less
@@ -73,6 +73,17 @@
 	}
 }
 
+#corpo {
+	width: auto;
+	background: #f0f0f0;
+	padding: 40px 10%;
+	margin: 0;
+	#explanation {
+		right: 10%;
+		top: 40px;
+	}
+}
+
 #content-nav {
 	background: #fff;
 	&.fixed {
@@ -82,7 +93,7 @@
 	}
 	nav {
 		width: 100%;
-		padding-top: 60px;
+		padding-top: 0;
 		.grouped,
 		a {
 			font-family: "Oswald";
